--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
     --verde : #f1be16;
     --blanco : #FFF;
-    --rojo   : #c50000;
+    --rojo   : #850606;
     --oscuro : #000;
     --titulos : 'Arima Madurai', cursive;
     --parrafos : 'Mulish', sans-serif;
@@ -19,6 +19,10 @@ body{
 
 *,*::after,*::before {
     box-sizing: inherit;
+}
+
+img {
+    max-width: 100%;
 }
 
 .contenedor{
@@ -111,6 +115,14 @@ h3, p, a{
     color: var(--oscuro);
 }
 
+.btn-rojo {
+    background-color: var(--rojo);
+    font-weight: bold;
+    display: inline-block;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
 .contenedor-navegacion{
     background-color: var(--oscuro);
     position: relative;
@@ -192,7 +204,10 @@ h3, p, a{
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, .5);
+
 }
+
+
 
 .texto-encabezado{
     position: absolute;
@@ -220,3 +235,70 @@ video{
     width: 100%;
     height: 100%;
 }
+
+.contenedor-nosotros {
+    padding-top: 5rem;
+}
+
+@media(min-width: 768px) {
+    .contenedor-nosotros {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+
+.texto-nosotros, .imagenes-nosotros {
+    flex: 0 0 calc(50% - 1rem);
+} 
+
+.texto-nosotros .bienvenida {
+    font-size: 4rem;
+    color: var(--verde);
+    text-align: center;
+}
+
+@media(min-width: 768px) {
+    .texto-nosotros .bienvenida {
+        text-align: left;
+    }
+}
+
+.texto-nosotros h1 {
+    font-size: 5rem;
+    text-align: center;
+}
+
+@media(min-width: 768px) {
+    .texto-nosotros h1 {
+        text-align: left;
+    }
+}
+
+.texto-nosotros p {
+    font-size: 2rem;
+    text-align: center;
+}
+@media(min-width: 768px) {
+    .texto-nosotros p {
+        text-align: left;
+    }
+}
+
+.imagenes-nosotros {
+    display: flex;
+    justify-content: space-between;
+}
+
+.imagenes-nosotros img {
+    border-radius: 5px;
+}
+
+.imagen1, .imagenes2 {
+    flex: 0 0 calc(50% - 1rem);
+}
+
+.imagenes2 img {
+    margin-bottom: 1rem;
+}
+
