--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --verde : #f1be16;
+    --verde : #947409;
     --blanco : #FFF;
     --rojo   : #850606;
     --oscuro : #000;
@@ -122,6 +122,16 @@ h3, p, a{
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
+.btn-verde {
+    background-color: var(--verde);
+    border: none;
+    display: inline-block;
+    margin-bottom: 2rem;
+    font-family: var(--parrafos);
+}
+
+
 
 .contenedor-navegacion{
     background-color: var(--oscuro);
@@ -302,3 +312,73 @@ video{
     margin-bottom: 1rem;
 }
 
+/* platillos */
+
+.texto-platillos {
+    text-align: center;
+    font-size: 5rem;
+}
+
+.botones-platillos {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.botones-platillos button {
+    flex: 0 0 calc(50% - 1rem);
+    padding: 1rem 3rem;
+}
+
+@media(min-width: 768px) {
+    .botones-platillos {
+        display: inline-block;
+    }
+
+    .botones-platillos button {
+        flex: unset;
+    }
+}
+
+
+
+@media(min-width: 768px) {
+    .platillos {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+}
+
+.platillo {
+    flex: 0 0 calc(33.3% - 1rem);
+    border: 1px solid #e1e1e1;
+    padding: 2rem;
+}
+
+.platillo h2 {
+    text-align: center;
+}
+
+.platillo p {
+    font-size: 1.8rem;
+}
+
+.precio {
+    display: flex;
+    justify-content: space-between;
+}
+
+.precio p {
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+.precio button {
+    padding: 1rem;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--rojo);
+    color: var(--blanco);
+    font-family: var(--parrafos);
+}
