--- a/css/styles.css
+++ b/css/styles.css
@@ -387,3 +387,56 @@ video{
     color: var(--blanco);
     height: 3.8rem;
 }
+
+.separador {
+    background-image: url('../assets/img/ensalada.webp');
+    background-size: cover;
+    background-position:  center center;
+    background-repeat: no-repeat;
+    position: relative;
+    z-index: 2;
+    margin: 4rem 0;
+}
+
+.separador::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: -1;
+}
+
+.contenido-separador {
+    padding: 5rem;
+}
+
+.contenido-separador h2 {
+    font-size: 4rem;
+    color: var(--blanco);
+    text-align: center;
+}
+
+@media(min-width: 768px) {
+    .contenido-separador h2 {
+        text-align: left;
+        font-size: 5rem;
+        color: var(--blanco);
+    }
+}
+
+.contenido-separador p {
+    font-size: 3rem;
+    color: var(--blanco);
+    text-align: center;
+}
+
+@media(min-width: 768px) {
+    .contenido-separador p {
+        font-size: 3rem;
+        color: var(--blanco);
+        text-align: left;
+    }
+}
