Seccion del chef terminada

--- a/css/styles.css
+++ b/css/styles.css
@@ -440,3 +440,40 @@ video{
         text-align: left;
     }
 }
+
+
+/* seccion del chef */
+
+.chef {
+    margin-bottom: 3rem;
+}
+
+
+
+.chef h2 {
+    background-color: var(--rojo);
+    display: inline-block;
+    padding: 1rem 3rem;
+    color: var(--blanco);
+    font-size: 4rem;
+}
+
+
+@media(min-width: 768px) {
+    .contenido-chef {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.texto-chef, .imagen-chef {
+    flex: 0 0 calc(50% - 1rem);
+}
+
+.texto-chef h3 {
+    font-size: 3rem;
+}
+
+.texto-chef p {
+    font-size: 2rem;
+}
