--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 :root {
-    --verde : #947409;
+    --verde : #f1be16;
     --blanco : #FFF;
-    --rojo   : #850606;
+    --rojo   : #c90909;
+    --azul: #084246; /*color*/
     --oscuro : #000;
     --titulos : 'Arima Madurai', cursive;
     --parrafos : 'Mulish', sans-serif;
@@ -21,7 +22,7 @@ body{
     box-sizing: inherit;
 }
 
-img {
+img{
     max-width: 100%;
 }
 
@@ -95,7 +96,7 @@ h3, p, a{
 }
 
 @media(min-width: 768px){
-    .btn {
+    .btn{
         font-size: 2.2rem;
     }
 }
@@ -103,19 +104,19 @@ h3, p, a{
 .borders{
     border: 3px solid var(--blanco);
 }
+
 @media(min-width: 768px){
-    .borders {
+    .borders{
         border: 4px solid var(--blanco);
     }
 }
-
 
 .borders:hover{
     background-color: var(--blanco);
     color: var(--oscuro);
 }
 
-.btn-rojo {
+.btn-rojo{
     background-color: var(--rojo);
     font-weight: bold;
     display: inline-block;
@@ -123,19 +124,17 @@ h3, p, a{
     margin-bottom: 2rem;
 }
 
-.btn-verde {
-    background-color: var(--verde);
+.btn-azul{  /*color*/
+    background-color: var(--azul);
     border: none;
     display: inline-block;
     margin-bottom: 2rem;
     font-family: var(--parrafos);
 }
 
-.btn-verde:hover {
-    background-color: rgb(125, 78, 8);
+.btn-azul:hover{ /*color*/
+    background-color: rgb(78, 132, 139);
 }
-
-
 
 .contenedor-navegacion{
     background-color: var(--oscuro);
@@ -204,8 +203,6 @@ h3, p, a{
     margin-bottom: .5rem;
 }
 
-
-
 .contenido-header{
     position: relative;
 }
@@ -218,10 +215,7 @@ h3, p, a{
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, .5);
-
 }
-
-
 
 .texto-encabezado{
     position: absolute;
@@ -239,8 +233,8 @@ h3, p, a{
     font-size: 4rem;
 }
 
-@media(min-width: 768px) {
-    .texto-encabezado h2 {
+@media(min-width: 768px){
+    .texto-encabezado h2{
         font-size: 8rem;
     }
 }
@@ -250,136 +244,135 @@ video{
     height: 100%;
 }
 
-.contenedor-nosotros {
+.contenedor-nosotros{
     padding-top: 5rem;
 }
 
-@media(min-width: 768px) {
-    .contenedor-nosotros {
+@media(min-width: 768px){
+    .contenedor-nosotros{
         display: flex;
         justify-content: space-between;
     }
 }
 
-
-.texto-nosotros, .imagenes-nosotros {
+.texto-nosotros, .imagenes-nosotros{
     flex: 0 0 calc(50% - 1rem);
-} 
+}
 
-.texto-nosotros .bienvenida {
+.texto-nosotros .bienvenido{
     font-size: 4rem;
     color: var(--verde);
     text-align: center;
 }
 
-@media(min-width: 768px) {
-    .texto-nosotros .bienvenida {
+@media(min-width: 768px){
+    .texto-nosotros .bienvenido{
         text-align: left;
     }
 }
 
-.texto-nosotros h1 {
+.texto-nosotros h1{
     font-size: 5rem;
     text-align: center;
 }
 
-@media(min-width: 768px) {
-    .texto-nosotros h1 {
+@media(min-width: 768px){
+    .texto-nosotros h1{
         text-align: left;
     }
 }
 
-.texto-nosotros p {
+.texto-nosotros p{
     font-size: 2rem;
     text-align: center;
 }
-@media(min-width: 768px) {
-    .texto-nosotros p {
+
+@media(min-width: 768px){
+    .texto-nosotros p{
         text-align: left;
     }
 }
 
-.imagenes-nosotros {
+.imagenes-nosotros{
     display: flex;
     justify-content: space-between;
 }
 
-.imagenes-nosotros img {
+.imagenes-nosotros img{
     border-radius: 5px;
 }
 
-.imagen1, .imagenes2 {
+.imagen1, .imagenes2{
     flex: 0 0 calc(50% - 1rem);
 }
 
-.imagenes2 img {
+.imagenes2{
     margin-bottom: 1rem;
 }
 
-/* platillos */
+/*platillos*/
 
-.texto-platillos {
+.texto-platillos{
     text-align: center;
     font-size: 5rem;
 }
 
-.botones-platillos {
+.botones-platillos{
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
 }
 
-.botones-platillos button {
+.botones-platillos button{
     flex: 0 0 calc(50% - 1rem);
     padding: 1rem 3rem;
 }
 
-@media(min-width: 768px) {
-    .botones-platillos {
+@media(min-width: 768px){
+    .botones-platillos{
         display: inline-block;
     }
 
-    .botones-platillos button {
+    .botones-platillos button{
         flex: unset;
     }
 }
 
 
-
-@media(min-width: 768px) {
-    .platillos {
+@media(min-width: 768px){
+    .platillos{
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
     }
 }
 
-.platillo {
+.platillo{
     flex: 0 0 calc(33.3% - 1rem);
     border: 1px solid #e1e1e1;
     padding: 2rem;
 }
 
-.platillo h2 {
+.platillo h2{
     text-align: center;
 }
 
-.platillo p {
+.platillo p{
     font-size: 1.8rem;
 }
 
-.precio {
+.precio{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.precio p {
+.precio p{
     font-weight: bold;
     font-size: 2rem;
 }
 
-.precio button {
+.precio button{
     padding: 1rem;
     border-radius: 5px;
     border: none;
@@ -388,17 +381,17 @@ video{
     height: 3.8rem;
 }
 
-.separador {
+.separador{
     background-image: url('../assets/img/ensalada.webp');
     background-size: cover;
-    background-position:  center center;
+    background-position: center center;
     background-repeat: no-repeat;
     position: relative;
     z-index: 2;
     margin: 4rem 0;
 }
 
-.separador::before {
+.separador::before{
     content: '';
     position: absolute;
     top: 0;
@@ -409,48 +402,45 @@ video{
     z-index: -1;
 }
 
-.contenido-separador {
+.contenido-separador{
     padding: 5rem;
 }
 
-.contenido-separador h2 {
+.contenido-separador h2{
     font-size: 4rem;
     color: var(--blanco);
     text-align: center;
 }
 
-@media(min-width: 768px) {
-    .contenido-separador h2 {
+@media(min-width: 768px){
+    .contenido-separador h2{
         text-align: left;
         font-size: 5rem;
         color: var(--blanco);
     }
 }
 
-.contenido-separador p {
+.contenido-separador p{
     font-size: 3rem;
     color: var(--blanco);
     text-align: center;
 }
 
-@media(min-width: 768px) {
-    .contenido-separador p {
+@media(min-width: 768px){
+    .contenido-separador p{
         font-size: 3rem;
         color: var(--blanco);
         text-align: left;
     }
 }
 
+/*seccion del chef*/
 
-/* seccion del chef */
-
-.chef {
+.chef{
     margin-bottom: 3rem;
 }
 
-
-
-.chef h2 {
+.chef h2{
     background-color: var(--rojo);
     display: inline-block;
     padding: 1rem 3rem;
@@ -458,22 +448,21 @@ video{
     font-size: 4rem;
 }
 
-
-@media(min-width: 768px) {
-    .contenido-chef {
+@media(min-width: 768px){
+    .contenido-chef{
         display: flex;
         justify-content: space-between;
     }
 }
 
-.texto-chef, .imagen-chef {
+.texto-chef, .imagen-chef{
     flex: 0 0 calc(50% - 1rem);
 }
 
-.texto-chef h3 {
+.texto-chef h3{
     font-size: 3rem;
 }
 
-.texto-chef p {
+.texto-chef p{
     font-size: 2rem;
 }
