--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,14 @@ h3, p, a{
     z-index: 5;
 }
 
+.menu-fixed{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #000;
+}
+
 .contenido-navegacion{
     display: flex;
     align-items: center;
